--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -32,9 +32,6 @@ p {
 }
 
 :root{
-  background-color: transparent;
-  background-image: radial-gradient(rgb(90, 90, 107) 1px, #000000 1px);
-  background-size: 30px 30px;
-  width: 100%;
-  height: 100%;
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(3,3,52,1) 62%, rgba(15,101,119,1) 100%);
 }
